# Research-Publications

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  index.html  style.css
.github/workflows/: deploy.yml  update_situation_monitor.yml  update_stack.yml
lab-parse/: Cargo.toml
lab-parse/src/: parse.rs
lab-types/: Cargo.toml
lab-types/src/: lib.rs  modules.rs  types.rs
prebuild/: Cargo.toml
prebuild/src/: main.rs
render-core/: Cargo.toml
render-core/src/: lib.rs  markdown.rs
render-core/src/lab/: mod.rs  render.rs
research-docs/: thesis-summary.md
research-docs/julia-crypto/: mod_01.md  mod_01_lab.md  mod_02.md  mod_02_lab.md  mod_03.md  mod_03_lab.md  mod_04.md  mod_04_lab.md  mod_05.md  mod_05_lab.md  mod_06.md  mod_06_lab.md  mod_07.md  mod_07_lab.md  mod_08.md  mod_08_lab.md
research-docs/malware-traffic/: smartapesg-2026-05-22-ioc.md  smartapesg-2026-05-22-sigma.md  smartapesg-2026-05-22.md
research-docs/projects/: casre.md  geospatial-intel.md  hlidskjalf.md  net-honeynet.md  siem-ensemble.md  vanguard-re.md
research-docs/reports/: conti-locker-ioc.md  conti-locker-sigma.md  conti-locker.md  lovely-malware-ioc.md  lovely-malware-sigma.md  lovely-malware.md  raccoon-stealer-ioc.md  raccoon-stealer-sigma.md  raccoon-stealer.md  wannacry-ioc.md  wannacry-sigma.md  wannacry.md
research-docs/tidy-tuesday/: analysis-2026-05-26.jl  se4all-2026-05-26.md
research-docs/working-papers/: cyber-neomedievalism.md
scripts/: aggregate_situation_feed.py  audit_stack.py  build_malware_traffic_json.py  dev-fast.sh  generate_seo.py  x_list_client.py
src/: lib.rs  main.rs  routes.rs
src/components/: animated_background.rs  clearance_block.rs  contact_form.rs  lazy_section.rs  markdown_content.rs  mod.rs  seo_head.rs  stack_matrix.rs  technical_document.rs  theme_toggle.rs
src/lab/: crypto.rs  editor.rs  editor_keys.rs  julia_interp.rs  kernel.rs  layout.rs  mod.rs  modules.rs  parse.rs  types.rs
src/lab/components/: block_stream.rs  blueprint_block.rs  brief_block.rs  command_bar.rs  inspector.rs  leetcode_workspace.rs  mod.rs  probe_block.rs  verify_block.rs  workspace.rs
src/malware_traffic/: charts.rs  explorer.rs  mod.rs  report.rs
src/pages/: contact.rs  curriculum.rs  home.rs  lab.rs  layout.rs  malware_traffic.rs  mod.rs  module.rs  project.rs  report.rs  situation_monitor.rs  tidy_tuesday.rs
src/projects/: mod.rs
src/reports/: mod.rs
src/seo/: mod.rs
src/situation_monitor/: map.rs  mod.rs  storage.rs
src/theme/: mod.rs
src/tidy_tuesday/: analysis.rs  charts.rs  controls.rs  mod.rs  se4all.rs
src/utils/: debounce.rs  markdown.rs  mod.rs  script_loader.rs
static/: katex-init.js  lab-editor.js  robots.txt  situation-map.js  stack.json  vendor-loader.js
static/malware-traffic/smartapesg-2026-05-22/: traffic.json
static/rendered/: thesis-summary.html
static/rendered/briefs/: cyber-neomedievalism.html
static/rendered/julia-crypto/: mod_01.html  mod_01_lab.html  mod_02.html  mod_02_lab.html  mod_03.html  mod_03_lab.html  mod_04.html  mod_04_lab.html  mod_05.html  mod_05_lab.html  mod_06.html  mod_06_lab.html  mod_07.html  mod_07_lab.html  mod_08.html  mod_08_lab.html
static/rendered/lab/: mod_01.json  mod_02.json  mod_03.json  mod_04.json  mod_05.json  mod_06.json  mod_07.json  mod_08.json
static/rendered/malware-traffic/: smartapesg-2026-05-22-ioc.html  smartapesg-2026-05-22-sigma.html  smartapesg-2026-05-22.html  smartapesg-2026-05-22.report.json
static/rendered/projects/: casre.html  geospatial-intel.html  hlidskjalf.html  (+3 more)
static/situation-monitor/: feed.json
(+15 files in other folders)
