[package]
name = "research-publications"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "Event",
    "console",
] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.5"
comrak = "0.27.0"
