[workspace]
members = [".", "lab-parse", "lab-types", "prebuild", "render-core"]
resolver = "2"

[package]
name = "research-publications"
version = "0.1.0"
edition = "2021"

[lib]
name = "research_publications"
path = "src/lib.rs"

[[bin]]
name = "research-publications"
path = "src/main.rs"

[features]
default = ["full"]
full = ["lab", "malware-traffic", "tidy-tuesday", "situation-monitor"]
lab = []
malware-traffic = []
tidy-tuesday = []
situation-monitor = []

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "KeyboardEvent",
    "PointerEvent",
    "Event",
    "Element",
    "DomRect",
    "console",
    "Storage",
    "MediaQueryList",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-timers = "0.3"
lab-types = { path = "lab-types" }

[profile.dev]
incremental = true
codegen-units = 16

[profile.dev-wasm]
inherits = "dev"
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
