[package]
name = "render-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
comrak = { version = "0.27.0", default-features = false }
lab-parse = { path = "../lab-parse" }
lab-types = { path = "../lab-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
